add connect chat handler
